crates/plotnik-tests/tests/02-parser/recovery_incomplete/field_equals_typo_missing_value.txt
Q = (call name = )
------------------ DIAGNOSTICS -------------------
error: grammar fields use `:`, not `=`
 --> query.ptk:1:16
  |
1 | Q = (call name = )
  |                ^
  |
help: use `:`
  |
1 - Q = (call name = )
1 + Q = (call name : )
  |

error: expected an expression
 --> query.ptk:1:18
  |
1 | Q = (call name = )
  |                  ^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
